<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="nombreCompleto">Nombre Nompleto</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="logo_de_cba_fly">Logo de CBA-Fly</string>
    <string name="ya_ten_s_cuenta_inici_sesi_n">¿Ya tenés cuenta? Iniciá sesión</string>
    <string name="bot_n_que_te_lleva_a_iniciar_sesi_n">Botón que te lleva a iniciar sesión</string>
    <string name="bot_n_para_crear_tu_cuenta">Botón para crear tu cuenta</string>
    <string name="bienvenido">Hola</string>
    <string name="bot_n_para_cerrar_sesi_n">Botón para Cerrar Sesión</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="bot_n_para_ir_a_secci_n_reservas_vuelos">Botón para ir a sección Reservas/Vuelos</string>
    <string name="revisar_vuelos">Revisar Vuelos</string>
    <string name="bot_n_para_ir_a_secci_n_contacto">Botón para ir a sección Contacto</string>
    <string name="contactanos">Contactanos</string>
    <string name="bot_n_para_ir_a_edici_n_de_perfil">Botón para ir a Edición de Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="bot_n_para_regresar_a_inicio">Botón para regresar a Inicio</string>
    <string name="volver">Volver</string>
    <string name="boton_para_regresar_a_perfil">Botón para regresar a Perfil</string>
    <string name="como_recuperar_tu_contrasena">Cómo recuperar tu contraseña</string>
    <string name="instruccionesRecuperacion">Colocá tu E-mail abajo. ¡Te llegará un correo con las instrucciones para recuperar tu contraseña!</string>
    <string name="botonEnviarCorreoRecuperacion">Botón para enviar un correo de recuperación de contraseña</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="no_ten_s_cuenta_registrate">¿No tenés cuenta? ¡Registrate!</string>
    <string name="botonCrearCuenta">Botón que te lleva a crearte una cuenta</string>
    <string name="olvidasteContrasena">¿Te olvidaste la contraseña? Entrá aca</string>
    <string name="botonRecuperarContrasena12">Botón que te lleva a recuperar tu contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="bot_n_para_iniciar_sesi_n">Botón para iniciar sesión</string>
    <string name="editar">Editar</string>
    <string name="botonEnviarInfoPerfil">Botón para enviar la información del Perfil</string>
    <string name="ciudad">Ciudad</string>
    <string name="pais">País</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="dni">DNI</string>
    <string name="telefono">Teléfono</string>
    <string name="edicionPerfil12">Edición de perfil</string>
    <string name="qrVaPaginaCba_fly">QR que lleva a la página web de CBA-Fly</string>
    <string name="como_contactarnos">Cómo contactarnos</string>
    <string name="podesContactarnos">Podés contactarnos a través de nuestro correo o página web:</string>
    <string name="cbaflyEmail">cbafly-contacto@gmail.com</string>
    <string name="correoContacto">Correo electrónico de contacto</string>
    <string name="tocarQr">¡Tocá el QR para ir directo a nuestra página!</string>
    <string name="describiendoAccionQr">Texto describiendo acciones del QR</string>
    <string name="vuelos">Vuelos</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="horario_salida">Horario Salida</string>
    <string name="horario_llegada">Horario Llegada</string>
    <string name="duracion">Duración</string>
    <string name="numero_vuelo">Número Vuelo</string>
    <string name="tipo_avion">Tipo Avión</string>
    <string name="monto">Monto</string>
</resources>