<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Contact">

    <TextView
        android:id="@+id/tocarQr1"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/describiendoAccionQr"
        android:fontFamily="@font/poppins"
        android:text="@string/tocarQr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/enlaceQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoElectronicocbafly"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/correoElectronicocbafly"
        android:layout_width="360dp"
        android:layout_height="46dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/correoContacto"
        android:fontFamily="@font/poppins"
        android:text="@string/cbaflyEmail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/tocarQr1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionContact"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/descripcionContact"
        android:layout_width="360dp"
        android:layout_height="112dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/como_contactarnos"
        android:fontFamily="@font/poppins"
        android:text="@string/podesContactarnos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/correoElectronicocbafly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/enlaceQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="6dp"
        android:clickable="true"
        android:contentDescription="@string/qrVaPaginaCba_fly"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tocarQr1"
        app:srcCompat="@drawable/qrcbaflycontacto" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="159dp"
        android:layout_height="70dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="@color/light_blue2"
        android:contentDescription="@string/boton_para_regresar_a_perfil"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="volverAtras"
        android:text="@string/volver"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enlaceQR"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>