<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Profile">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/logoCbaPrf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/logoutButtonPrf"
        android:layout_width="245dp"
        android:layout_height="92dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#00AAFF"
        android:contentDescription="@string/bot_n_para_cerrar_sesi_n"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="cerrarSesion"
        android:text="@string/cerrar_sesi_n"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactButtonPrf"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/bookingButtonPrf"
        android:layout_width="245dp"
        android:layout_height="92dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#00AAFF"
        android:contentDescription="@string/bot_n_para_ir_a_secci_n_reservas_vuelos"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="goBooking"
        android:text="@string/revisar_vuelos"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/editProfileButtonPrf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoCbaPrf"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/contactButtonPrf"
        android:layout_width="245dp"
        android:layout_height="92dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#00AAFF"
        android:contentDescription="@string/bot_n_para_ir_a_secci_n_contacto"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="goContact"
        android:text="@string/contactanos"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/logoutButtonPrf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileButtonPrf"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/editProfileButtonPrf"
        android:layout_width="245dp"
        android:layout_height="92dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00AAFF"
        android:contentDescription="@string/bot_n_para_ir_a_edici_n_de_perfil"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="goEdit"
        android:text="@string/editar_perfil"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/contactButtonPrf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingButtonPrf"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/logoCbaPrf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/logo_de_cba_fly"
        app:layout_constraintBottom_toTopOf="@+id/bookingButtonPrf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTitle"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>